# MaximumHappyVertices

./: .gitignore  CMakeLists.txt  ConstructiveAlgs.cpp  ConstructiveAlgs.h  ExactSolver.cpp  ExactSolver.h  Graph.cpp  Graph.h  README.md  SimulatedAnnealing.cpp  SimulatedAnnealing.h  analyseFeatures.py  clusteringGenerator.py  config.cpp  config.h  configCompare.txt  createClusterGraphs.py  createLargeGraphs.py  createLinearGraphs.py  exactResults.txt  exactResultsFinal.txt  exactTests.py  exactTimeFeatures.py  features.txt  generateAndTest.py  genereteInstances.py  graph.txt  graph2.txt  graphFeatures.txt  growthSeed.py  growthSeedAnalysis.py  growthSeedResults.txt  growthSeedResults2.txt  growthSeedResults3.txt  growthTests.py  main.cpp  metaVsConstructFeatures.py  metaVsExactFeatures.py  plotComparison.py  plotProgress.py  (+11 more)
archive/: 500comparison.txt  algorithmComparison.txt  clusteringAnalysis.py  clusteringResults.txt  configCompare.py  exactResults.txt  exactResults2.txt  genereteInstances.py  growthSeedAnalysis.py  growthSeedResults4.txt  metaVsConstructFeatures.py  plotComparison.py  reduceResults.txt  tabuCompare.py  tabuCompare3.txt
experiments/: colorChangesAnalysis.py  colorChangesResults.txt  colorChangesTests.py  exactAnalysis.py  exactResults.txt  exactTests.py  growthAnalysis.py  growthTests.py  largeResults.txt  largeResults2.txt  largeTests.py  newTabuResults.txt  reduceAnalysis.py  reduceResults.txt  reduceTests.py  reduce_results.eps  tabuAnalysis.py  tabuResults.txt  tabuTests.py  tabuTimeAnalysis.py  tabuTimeLargeAnalysis.py  tabuTimeLargeResults.txt  tabuTimeResults.txt  tabuTimeTests.py  tabu_vgl_growth.eps
generator/: gen.cpp
happytabu/: IO.cpp  IO.h  README.txt  addprecolourings.cpp  addprecolourings.h  bounds.cpp  bounds.h  graph.cpp  graph.h  graph.txt  initsol.cpp  initsol.h  main.cpp  main.h  tabu.cpp  tabu.h
src/: ConstructiveAlgs.cpp  ConstructiveAlgs.h  ExactSolver.cpp  ExactSolver.h  Graph.cpp  Graph.h  SimulatedAnnealing.cpp  SimulatedAnnealing.h  clusteringGenerator.cpp  config.cpp  config.h  distribution_test.cpp  linearDistributionGenerator.cpp  linear_int_distribution.h  main.cpp  reduce.cpp  reduce.h
testInstances/: dRegular1.txt  dRegular10.txt  dRegular11.txt  dRegular13.txt  dRegular17.txt  dRegular19.txt  dRegular2.txt  dRegular21.txt  dRegular22.txt  dRegular23.txt  dRegular24.txt  dRegular25.txt  dRegular26.txt  dRegular27.txt  dRegular28.txt  dRegular29.txt  dRegular3.txt  dRegular30.txt  dRegular31.txt  dRegular32.txt  dRegular33.txt  dRegular34.txt  dRegular35.txt  dRegular36.txt  dRegular37.txt  dRegular38.txt  dRegular39.txt  dRegular4.txt  dRegular40.txt  dRegular41.txt  dRegular42.txt  dRegular43.txt  dRegular44.txt  dRegular45.txt  dRegular46.txt  dRegular47.txt  dRegular48.txt  dRegular49.txt  dRegular5.txt  dRegular50.txt  (+215 more)
todo/: dRegular12.txt  dRegular14.txt  dRegular15.txt  dRegular16.txt  dRegular18.txt  dRegular20.txt  random11.txt  random12.txt  random13.txt  random14.txt  random15.txt  random16.txt  random17.txt  random18.txt  random19.txt  random20.txt  scale11.txt  scale12.txt  scale13.txt  scale14.txt  scale15.txt  scale16.txt  scale17.txt  scale18.txt  scale19.txt  scale20.txt
tuning/: forbidden.txt  instances-list.txt  parameters-growth.txt  parameters-main.txt  parameters.txt  scenario-growth.txt  scenario-main.txt  scenario.txt  target-runner-growth  target-runner-growth.bat  target-runner-main  target-runner-main.bat  target-runner.bat
tuningInstances/: random0.txt  random1.txt  random10.txt  random100.txt  random101.txt  random102.txt  random103.txt  random104.txt  random105.txt  random106.txt  random107.txt  random108.txt  random109.txt  random11.txt  random110.txt  random111.txt  random112.txt  random113.txt  random114.txt  random115.txt  random116.txt  random117.txt  random118.txt  random119.txt  random12.txt  random120.txt  random121.txt  random122.txt  random123.txt  random124.txt  random125.txt  random126.txt  random127.txt  random128.txt  random129.txt  random13.txt  random130.txt  random131.txt  random132.txt  random133.txt  (+116 more)
